QtBeef/src/Qt/qevent.bf

class QHoverEvent : IQHoverEvent, IQSinglePointEvent, IQPointerEvent, IQInputEvent, IQEvent
{
	private QHoverEvent_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QHoverEvent_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this(QEvent_Type type, IQPointF scenePos, IQPointF globalPos, IQPointF oldPos)
	{
		this.ptr = CQt.QHoverEvent_new(type, (.)scenePos?.ObjectPtr, (.)globalPos?.ObjectPtr, (.)oldPos?.ObjectPtr);
	}
	public this(QEvent_Type type, IQPointF pos, IQPointF oldPos)
	{
		this.ptr = CQt.QHoverEvent_new2(type, (.)pos?.ObjectPtr, (.)oldPos?.ObjectPtr);
	}
	public this(QEvent_Type type, IQPointF scenePos, IQPointF globalPos, IQPointF oldPos, void* modifiers)
	{
		this.ptr = CQt.QHoverEvent_new3(type, (.)scenePos?.ObjectPtr, (.)globalPos?.ObjectPtr, (.)oldPos?.ObjectPtr, modifiers);
	}
	public this(QEvent_Type type, IQPointF scenePos, IQPointF globalPos, IQPointF oldPos, void* modifiers, IQPointingDevice device)
	{
		this.ptr = CQt.QHoverEvent_new4(type, (.)scenePos?.ObjectPtr, (.)globalPos?.ObjectPtr, (.)oldPos?.ObjectPtr, modifiers, (.)device?.ObjectPtr);
	}
	public this(QEvent_Type type, IQPointF pos, IQPointF oldPos, void* modifiers)
	{
		this.ptr = CQt.QHoverEvent_new5(type, (.)pos?.ObjectPtr, (.)oldPos?.ObjectPtr, modifiers);
	}
	public this(QEvent_Type type, IQPointF pos, IQPointF oldPos, void* modifiers, IQPointingDevice device)
	{
		this.ptr = CQt.QHoverEvent_new6(type, (.)pos?.ObjectPtr, (.)oldPos?.ObjectPtr, modifiers, (.)device?.ObjectPtr);
	}
	public ~this()
	{
		CQt.QHoverEvent_Delete(this.ptr);
	}
	public QHoverEvent_Ptr Clone()
	{
		return QHoverEvent_Ptr(CQt.QHoverEvent_Clone((.)this.ptr.Ptr));
	}
	public QPoint_Ptr Pos()
	{
		return QPoint_Ptr(CQt.QHoverEvent_Pos((.)this.ptr.Ptr));
	}
	public QPointF_Ptr PosF()
	{
		return QPointF_Ptr(CQt.QHoverEvent_PosF((.)this.ptr.Ptr));
	}
	public bool IsUpdateEvent()
	{
		return CQt.QHoverEvent_IsUpdateEvent((.)this.ptr.Ptr);
	}
	public QPoint_Ptr OldPos()
	{
		return QPoint_Ptr(CQt.QHoverEvent_OldPos((.)this.ptr.Ptr));
	}
	public QPointF_Ptr OldPosF()
	{
		return QPointF_Ptr(CQt.QHoverEvent_OldPosF((.)this.ptr.Ptr));
	}
	public Qt_MouseButton Button()
	{
		return CQt.QSinglePointEvent_Button((.)this.ptr.Ptr);
	}
	public void* Buttons()
	{
		return CQt.QSinglePointEvent_Buttons((.)this.ptr.Ptr);
	}
	public QPointF_Ptr Position()
	{
		return QPointF_Ptr(CQt.QSinglePointEvent_Position((.)this.ptr.Ptr));
	}
	public QPointF_Ptr ScenePosition()
	{
		return QPointF_Ptr(CQt.QSinglePointEvent_ScenePosition((.)this.ptr.Ptr));
	}
	public QPointF_Ptr GlobalPosition()
	{
		return QPointF_Ptr(CQt.QSinglePointEvent_GlobalPosition((.)this.ptr.Ptr));
	}
	public bool IsBeginEvent()
	{
		return CQt.QSinglePointEvent_IsBeginEvent((.)this.ptr.Ptr);
	}
	public bool IsEndEvent()
	{
		return CQt.QSinglePointEvent_IsEndEvent((.)this.ptr.Ptr);
	}
	public QObject_Ptr ExclusivePointGrabber()
	{
		return QObject_Ptr(CQt.QSinglePointEvent_ExclusivePointGrabber((.)this.ptr.Ptr));
	}
	public void SetExclusivePointGrabber(IQObject exclusiveGrabber)
	{
		CQt.QSinglePointEvent_SetExclusivePointGrabber((.)this.ptr.Ptr, (.)exclusiveGrabber?.ObjectPtr);
	}
	public QPointingDevice_Ptr PointingDevice()
	{
		return QPointingDevice_Ptr(CQt.QPointerEvent_PointingDevice((.)this.ptr.Ptr));
	}
	public QPointingDevice_PointerType PointerType()
	{
		return CQt.QPointerEvent_PointerType((.)this.ptr.Ptr);
	}
	public void SetTimestamp(c_ulonglong timestamp)
	{
		CQt.QPointerEvent_SetTimestamp((.)this.ptr.Ptr, timestamp);
	}
	public void* PointCount()
	{
		return CQt.QPointerEvent_PointCount((.)this.ptr.Ptr);
	}
	public QEventPoint_Ptr Point(void* i)
	{
		return QEventPoint_Ptr(CQt.QPointerEvent_Point((.)this.ptr.Ptr, i));
	}
	public void** Points()
	{
		return CQt.QPointerEvent_Points((.)this.ptr.Ptr);
	}
	public QEventPoint_Ptr PointById(c_int id)
	{
		return QEventPoint_Ptr(CQt.QPointerEvent_PointById((.)this.ptr.Ptr, id));
	}
	public bool AllPointsGrabbed()
	{
		return CQt.QPointerEvent_AllPointsGrabbed((.)this.ptr.Ptr);
	}
	public bool AllPointsAccepted()
	{
		return CQt.QPointerEvent_AllPointsAccepted((.)this.ptr.Ptr);
	}
	public void SetAccepted(bool accepted)
	{
		CQt.QPointerEvent_SetAccepted((.)this.ptr.Ptr, accepted);
	}
	public QObject_Ptr ExclusiveGrabber(IQEventPoint point)
	{
		return QObject_Ptr(CQt.QPointerEvent_ExclusiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr));
	}
	public void SetExclusiveGrabber(IQEventPoint point, IQObject exclusiveGrabber)
	{
		CQt.QPointerEvent_SetExclusiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)exclusiveGrabber?.ObjectPtr);
	}
	public void ClearPassiveGrabbers(IQEventPoint point)
	{
		CQt.QPointerEvent_ClearPassiveGrabbers((.)this.ptr.Ptr, (.)point?.ObjectPtr);
	}
	public bool AddPassiveGrabber(IQEventPoint point, IQObject grabber)
	{
		return CQt.QPointerEvent_AddPassiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)grabber?.ObjectPtr);
	}
	public bool RemovePassiveGrabber(IQEventPoint point, IQObject grabber)
	{
		return CQt.QPointerEvent_RemovePassiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)grabber?.ObjectPtr);
	}
	public QInputDevice_Ptr Device()
	{
		return QInputDevice_Ptr(CQt.QInputEvent_Device((.)this.ptr.Ptr));
	}
	public QInputDevice_DeviceType DeviceType()
	{
		return CQt.QInputEvent_DeviceType((.)this.ptr.Ptr);
	}
	public void* Modifiers()
	{
		return CQt.QInputEvent_Modifiers((.)this.ptr.Ptr);
	}
	public void SetModifiers(void* modifiers)
	{
		CQt.QInputEvent_SetModifiers((.)this.ptr.Ptr, modifiers);
	}
	public c_ulonglong Timestamp()
	{
		return CQt.QInputEvent_Timestamp((.)this.ptr.Ptr);
	}
	public QEvent_Type Type()
	{
		return CQt.QEvent_Type((.)this.ptr.Ptr);
	}
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous((.)this.ptr.Ptr);
	}
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted((.)this.ptr.Ptr);
	}
	public void Accept()
	{
		CQt.QEvent_Accept((.)this.ptr.Ptr);
	}
	public void Ignore()
	{
		CQt.QEvent_Ignore((.)this.ptr.Ptr);
	}
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent((.)this.ptr.Ptr);
	}
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent((.)this.ptr.Ptr);
	}
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent((.)this.ptr.Ptr);
	}
	public c_int RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	public c_int RegisterEventType1(c_int hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
}
interface IQHoverEvent : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QWheelEvent
// --------------------------------------------------------------
[CRepr]
struct QWheelEvent_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QWheelEvent_new")]
	public static extern QWheelEvent_Ptr QWheelEvent_new(void** pos, void** globalPos, void* pixelDelta, void* angleDelta, void* buttons, void* modifiers, Qt_ScrollPhase phase, bool inverted);
	[LinkName("QWheelEvent_new2")]
	public static extern QWheelEvent_Ptr QWheelEvent_new2(void** pos, void** globalPos, void* pixelDelta, void* angleDelta, void* buttons, void* modifiers, Qt_ScrollPhase phase, bool inverted, Qt_MouseEventSource source);
	[LinkName("QWheelEvent_new3")]
	public static extern QWheelEvent_Ptr QWheelEvent_new3(void** pos, void** globalPos, void* pixelDelta, void* angleDelta, void* buttons, void* modifiers, Qt_ScrollPhase phase, bool inverted, Qt_MouseEventSource source, void** device);
	[LinkName("QWheelEvent_Delete")]
	public static extern void QWheelEvent_Delete(QWheelEvent_Ptr self);
	[LinkName("QWheelEvent_Clone")]
	public static extern void** QWheelEvent_Clone(void* self);
	[LinkName("QWheelEvent_PixelDelta")]
	public static extern void* QWheelEvent_PixelDelta(void* self);
	[LinkName("QWheelEvent_AngleDelta")]
	public static extern void* QWheelEvent_AngleDelta(void* self);
	[LinkName("QWheelEvent_Phase")]
	public static extern Qt_ScrollPhase QWheelEvent_Phase(void* self);
	[LinkName("QWheelEvent_Inverted")]
	public static extern bool QWheelEvent_Inverted(void* self);
	[LinkName("QWheelEvent_IsInverted")]
	public static extern bool QWheelEvent_IsInverted(void* self);
	[LinkName("QWheelEvent_HasPixelDelta")]
	public static extern bool QWheelEvent_HasPixelDelta(void* self);
	[LinkName("QWheelEvent_IsBeginEvent")]
	public static extern bool QWheelEvent_IsBeginEvent(void* self);
	[LinkName("QWheelEvent_IsUpdateEvent")]
	public static extern bool QWheelEvent_IsUpdateEvent(void* self);
	[LinkName("QWheelEvent_IsEndEvent")]
	public static extern bool QWheelEvent_IsEndEvent(void* self);
	[LinkName("QWheelEvent_Source")]
	public static extern Qt_MouseEventSource QWheelEvent_Source(void* self);
}
